
ChangeLog
 [ + added, - removed, * changed ]
 * 07Jan2016 Emit raw system time at APPL_EV events for synchronization purposes
               with other tools
 * 05Jan2016 Fixed bug when generating communications between Memcpy commands
               in CUDA applications
 * 18Dec2015 Fixed bug in Time Synchronization due to uninit Spawn time if MPI_Comm_spawn was not used
             Emit Java thread name in Java thread start
 * 15Dec2015 Fixed bug in Map_Paraver_Files at file_set.c. Field SkipAsMasterOfSubtree of PRVFileSet_t was not initialized, leading to undeterministic problems where this would randomly take garbage values ending in a later race condition in the parallel merge. 
 + 11Dec2015 Added documentation for use on top of PnMPI
 * 03Dec2015 In BG/Q MPI_get_processor_name != gethostame -> fails when matching
               the contents of .mpits and each of the .mpit files
 * 23Nov2015 Guess location for EXTRAE_HOME based on the configured.sh script
             Further OMPT upgrades to latest spec
 * 19Nov2015 Added overhead section in the user guide using the overhead
               tests in a variety of systems.
 * 18Nov2015 Changed calls to MPI_Comm_compare in Trace_MPI_Communicator (mpi_wrapper.c) into PMPI_Comm_compare so as not to intercept those calls
 * 16Nov2015 Fix extra comma in papi_best_set
             Upgrade OMPT instrumentation
             Fix #pragma omp taskgroup instrumentation
 * 10Nov2015 Fix unfinished states due to the last event/state and improve
               messaging
 * 09Nov2015 Fix label for MPI_Ibarrier (shown as MPI_Ibcast)
 * 03Nov2015 Fix state generation for several new MPI calls (backported from 3.2.1)
 * 02Nov2015 Extended Java instrumentation through AspectJ and JVMTI
             Added $EXTRAE_HOME/bin/extreaj launcher for Java apps
             Added new examples in JAVA directory
                manual/  --> instrumentation without AspectJ
                automatic/-> instrumentation with AspectJ